--- a/packages/common/abstracts/_variable.scss
+++ b/packages/common/abstracts/_variable.scss
@@ -246,6 +246,18 @@ $-cell-required-color: $-color-danger !default; // 要求必填*颜色
 $-cell-required-size: 18px !default; // 必填*字号
 $-cell-vertical-top: 16px !default; // 表单类型-上下结构的间距
 
+/* calendar */
+$-calendar-fs: 12px !default;
+$-calendar-week-color: rgba(0, 0, 0, 0.45) !default;
+$-calendar-week-size: 30px !default;
+$-calendar-month-title-fs: 14px !default;
+$-calendar-month-title-color: rgba(0, 0, 0, 0.85) !default;
+$-calendar-day-fs: 14px !default;
+$-calendar-day-color: rgba(0, 0, 0, 0.65) !default;
+$-calendar-day-size: 40px !default;
+$-calendar-active-color: $-color-theme !default;
+$-calendar-range-color: $-color-theme-light !default;
+
 /* checkbox */
 $-checkbox-margin: 10px !default; // 多个复选框距离
 $-checkbox-bg: $-color-white !default; // 多个复选框距离
