--- a/packages/calendarView/components/monthPanel/index.scss
+++ b/packages/calendarView/components/monthPanel/index.scss
@@ -3,25 +3,27 @@
 
 @include b(month-panel) {
   font-size: $-calendar-fs;
+  padding: $-calendar-panel-padding;
 
   @include e(title) {
-    padding: 10px 0;
+    padding: 5px 0;
     text-align: center;
-    font-size: $-calendar-month-title-fs;
-    color: $-calendar-month-title-color;
+    font-size: $-calendar-panel-title-fs;
+    color: $-calendar-panel-title-color;
   }
   @include e(weeks) {
     display: flex;
-    box-shadow: 0 6px 10px -6px rgba(0, 0, 0, 0.09);
+    height: $-calendar-week-height;
+    line-height: $-calendar-week-height;
+    box-shadow: 0px 4px 8px 0 rgba(0, 0, 0, 0.02);
+    color: $-calendar-week-color;
+    font-size: $-calendar-week-fs;
   }
   @include e(week) {
     flex: 1;
-    height: $-calendar-week-size;
-    line-height: $-calendar-week-size;
-    color: $-calendar-week-color;
     text-align: center;
   }
   @include e(container) {
-    height: 50vh;
+    height: 378px;
   }
 }
