--- a/packages/common/abstracts/_variable.scss
+++ b/packages/common/abstracts/_variable.scss
@@ -247,19 +247,23 @@ $-cell-required-size: 18px !default; // 必填*字号
 $-cell-vertical-top: 16px !default; // 表单类型-上下结构的间距
 
 /* calendar */
-$-calendar-fs: 12px !default;
-$-calendar-week-color: rgba(0, 0, 0, 0.45) !default;
-$-calendar-week-size: 30px !default;
-$-calendar-month-title-fs: 14px !default;
-$-calendar-month-title-color: rgba(0, 0, 0, 0.85) !default;
-$-calendar-day-fs: 14px !default;
-$-calendar-day-color: rgba(0, 0, 0, 0.65) !default;
-$-calendar-day-size: 30px !default;
+$-calendar-fs: 16px !default;
+$-calendar-panel-padding: 0 12px !default;
+$-calendar-panel-title-fs: 14px !default;
+$-calendar-panel-title-color: rgba(0, 0, 0, 0.85) !default;
+$-calendar-week-color: rgba(0, 0, 0, 0.85) !default;
+$-calendar-week-height: 36px !default;
+$-calendar-week-fs: 12px !default;
+$-calendar-day-fs: 16px !default;
+$-calendar-day-color: rgba(0, 0, 0, 0.85) !default;
+$-calendar-day-fw: 500 !default;
+$-calendar-day-height: 64px !default;
+$-calendar-month-width: 50px !default;
 $-calendar-active-color: $-color-theme !default;
 $-calendar-disabled-color: rgba(0, 0, 0, 0.25) !default;
-$-calendar-range-color: rgba($-color-theme, 0.15) !default;
-$-calendar-day-info-size: 16px !default;
-$-calendar-day-info-fs: 12px !default;
+$-calendar-range-color: rgba($-color-theme, 0.09) !default;
+$-calendar-active-border: 8px !default;
+$-calendar-info-fs: 10px !default;
 
 /* checkbox */
 $-checkbox-margin: 10px !default; // 多个复选框距离
